--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "ms": "^2.1.3",
+    "nodemailer": "^6.10.1",
     "prisma": "^6.6.0",
     "redis": "^4.7.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/ioredis": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/ms": "^2.1.0",
     "@types/node": "^22.15.2",
+    "@types/nodemailer": "^6.4.17",
+    "@types/redis": "^4.0.11",
+    "@types/validator": "^13.15.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
@@ -21,6 +29,9 @@
     "printWidth": 160,
     "trailingComma": "none",
     "singleQuote": true
+  },
+  "prisma": {
+    "schema": "src/prisma/schema.prisma"
   },
   "scripts": {
     "start": "node build/app.js",
