--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "redis": "^4.7.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/ioredis": "^5.0.0",
