--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "ms": "^2.1.3",
     "nodemailer": "^6.10.1",
-    "prisma": "^6.6.0",
-    "redis": "^4.7.0"
+    "prisma": "^6.6.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -20,7 +20,6 @@
     "@types/ms": "^2.1.0",
     "@types/node": "^22.15.2",
     "@types/nodemailer": "^6.4.17",
-    "@types/redis": "^4.0.11",
     "@types/validator": "^13.15.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
